--- a/src/style/HeroSection.css
+++ b/src/style/HeroSection.css
@@ -23,7 +23,7 @@
     position: absolute;
     width: 100%;
     height: 100px;
-    top: 150px;
+    bottom: 60px;
   }
   .cta-btn{
    top: 500px;
